--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     </section>
     <section class="meme-section">
+      <div class="sentence">
 
+      </div>
     </section>
     <footer>
 
