add colors for different tube status

--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <header>
-
-    </header>
-    <section class="tube-section">
-
-    </section>
-    <section class="meme-section">
-
-    </section>
-    <footer>
-
-    </footer>
+  </head>
+  <body>
+    <header></header>
+    <section class="tube-section"></section>
+    <section class="meme-section"></section>
+    <footer></footer>
     <script src="logic.js"></script>
     <script src="feature-tube.js"></script>
     <script src="feature-meme.js"></script>
-
-</body>
+  </body>
 </html>
