work in progress for image adjusted css for position of image and text placeholder for image

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </section>
     <section class="meme-section">
       <div class="sentence">
-
+        <img class = "image">
       </div>
+
     </section>
     <footer>
 
