Display random image up to 1000

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
     </section>
     <section class="meme-section">
-      <div class="sentence">
-        <img class = "image">
-      </div>
-
+      <div class="sentence"></div>
+      <img class="image" alt="Random generate meme picture"/>
     </section>
     <footer>
 
