HTML Structure for intro section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <header>
 
     </header>
+
+    <section class="intro">
+      <h1 class="intro-title">Good ${morning}!</h1>
+      <div class="intro-time">time</div>
+      <div class="intro-dated">date</div>
+      <p class="intro-text"></p>
+
+    </section>
     <section class="tube-section">
 
     </section>
