Add tests and function to getTimeOfDay()

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="intro">
       <h1 class="intro-title">Good ${morning}!</h1>
       <div class="intro-time">time</div>
-      <div class="intro-dated">date</div>
+      <div class="intro-date">date</div>
       <p class="intro-text"></p>
 
     </section>
@@ -34,6 +34,7 @@
 
     </footer>
     <script src="logic.js"></script>
+    <script src="feature-intro.js"></script>
     <script src="feature-tube.js"></script>
     <script src="feature-meme.js"></script>
 
