--- a/index.html
+++ b/index.html
@@ -15,21 +15,25 @@
     <header>
 
     </header>
+<div>
 
-    <section class="intro">
-      <h1 class="intro-title">Good ${morning}!</h1>
-      <div class="intro-time">time</div>
-      <div class="intro-date">date</div>
-      <p class="intro-text"></p>
+  <section class="intro">
+    <h1 class="intro-title">Good ${morning}!</h1>
+    <div class="intro-time">time</div>
+    <div class="intro-date">date</div>
+    <p class="intro-text"></p>
+    
+    
+  </section>
+  <section class="meme-section">
+    <div class="sentence"></div>
+    <img class="image" alt="Random generate meme picture"/>
+  </section>
+</div>
 
-    </section>
-    <section class="tube-section">
+  </section>
+  <section class="tube-section">
 
-    </section>
-    <section class="meme-section">
-      <div class="sentence"></div>
-      <img class="image" alt="Random generate meme picture"/>
-    </section>
     <footer>
 
     </footer>
