--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
     <header>
 
     </header>
-<div>
+<div class="wrapper">
 
   <section class="intro">
     <h1 class="intro-title">Good ${morning}!</h1>
     <div class="intro-time">time</div>
     <div class="intro-date">date</div>
-    <p class="intro-text"></p>
     
     
+  </section>
+  <section class="intro-section">
+    <p class="intro-text">
+        orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+
+    </p>
+
   </section>
   <section class="meme-section">
     <div class="sentence"></div>
