--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Trainspiration</title>
 </head>
 <body>
     <header>
