Correct spelling Fixes #20

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
   <section class="intro-section">
     <div>
-      <h3 class="intro-smallTitle">Trainspiraton</h3>
+      <h3 class="intro-smallTitle">Trainspiration</h3>
       <p class="intro-text">
         London is one of the world's leading business centres with a public transport network to match. Business and travel, trains and inspiration; get a daily dose of wisdom live from trainspiration.
       </p>
